...
                Log.d("ProductsScreen", "imageUrl:$imageUrl ")
                Row(
                    modifier = Modifier
                        .fillMaxWidth()
                        .clickable { viewModel.handleIntent(ProductsIntent.Select(item.id)) }
                        .padding(12.dp)
                        .testTag("product_item"),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    AsyncImage(
                        model = ImageRequest.Builder(LocalContext.current)
                            .data(imageUrl)
                            .crossfade(true)
...
                    )
                    Spacer(Modifier.width(12.dp))
                    Column {
                        Text(
                            text = item.name,
                            style = MaterialTheme.typography.titleMedium,
                            modifier = Modifier.testTag("product_name")
                        )
                        Text(item.formattedPrice, style = MaterialTheme.typography.bodyMedium)
                    }
                }
            }
        }
...
